finalize products controller and add tests
